--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "game-of-life",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://blamy.github.io/game-of-life/",
   "dependencies": {
     "antd": "^2.13.8",
     "react": "^16.0.0",
@@ -11,8 +12,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",    
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
